--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
 
-        <title>Bootsrtap Exam</title>
+        <title>Company Portfolio</title>
         <!-- Link FontAwesome File -->
         <link rel="stylesheet" href="css/all.min.css">   
         <!-- Link Bootstrap Css File -->
